Footer no longer is long boy, gott stretch across page again

--- a/css/style.css
+++ b/css/style.css
@@ -561,6 +561,7 @@
     color: var(--white);
     text-align: center;
     padding-block: 30px;
+    display: flex;
   }
   
   .social-list {
